Remove directive ID maps